Fixed padding on hero image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,7 @@ body.dark #dark-theme-moon {
 
 @media screen and (max-width: 800px) {
   .hero {
-    padding-top: 5vh;
+    padding-top: 10vh;
   }
 
   .hero .container {
